--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -14,10 +14,10 @@
       = link_to  user_twitter_omniauth_authorize_path, class: "twitter__registration__button" do
         %i.fab.fa-twitter
         &nbsp;Twitterで登録する
-      = link_to "", class: "facebook__registration__button" do
+      = link_to user_facebook_omniauth_authorize_path, class: "facebook__registration__button" do
         %i.fab.fa-facebook-square
         &nbsp;facebookで登録する
-      = link_to "", class: "google__registration__button" do
+      = link_to user_google_oauth2_omniauth_authorize_path, class: "google__registration__button" do
         %i.fab.fa-google
         &nbsp;googleで登録する
 
