--- a/app/assets/stylesheets/_tickets.scss
+++ b/app/assets/stylesheets/_tickets.scss
@@ -5,153 +5,183 @@
 }
 
 .contents{
-  font-family: "Avenir Next", Verdana, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "游ゴシック", "Yu Gothic", "メイリオ", Meiryo, Osaka, sans-serif;
-  .introduction{
+  font-family: 'Libre Baskerville', 'A1 Mincho', serif;
+   .introduction{
     height: 600px;
     width: 100%;
-    background-image: image-url("fes_image.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center; 
+    display: flex;
     position: relative;
-    color: white;
-    text-shadow: 3px 3px #222222;
+    text-align: center;
     &__title{
-      font-size: 50px;
+      font-size: 35px;
       position: absolute;
       top: 300px;
       left: 40px;
+      color: #2D2D26;
+      font-weight: 100;
+      width: 50%;
     }
     &__explanation{
-      font-size: 20px;
+      font-size: 18px;
       position: absolute;
       top: 370px;
       left: 40px;
+      color: #2D2D26;
+      font-weight: 100;
+      width: 50%;
+    }
+    &__leftbox{
+      width: 20%;
+    }
+    &__backgrand{
+      width: 80%;
+      background-image: image-url("fes_image.jpg");
+      background-color: rgba(255,255,255,0.3);
+      background-blend-mode: lighten;
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center center; 
     }
   }
-  .upcoming{
-    width: 100%;
-    height: 400px;
-    background-color: #1F1F1F;
+  .blank{
+    height: 200px;
     text-align: center;
-    &__fes__title{
-      color: white;
-      font-size: 35px;
-      height: 40px;
-      line-height: 40px;
-      padding-top: 10px;
+    font-family: 'Libre Baskerville', 'A1 Mincho', serif;
+    &__title{
+      font-size: 25px;
+      padding-top: 50px;
     }
-    &__fes__box{
-      height: 330px;
+    &__explanation{
+      font-size: 12px;
+      padding-top: 15px;
+      color: #667581;
+    }
+    .fadeInUp{
+      opacity : 0;
+      transform: translateY(50px);
+      transition: 2.5s;
+    }
+  }
+  .ticket__transfer{
+    height: 420px;
+    width: 100%;
+    background-color: #f4f7fa;
+    display: flex;
+    text-align: center;
+    font-family: 'Libre Baskerville', 'A1 Mincho', serif;
+    &__leftbox{
+      width: 40%;
+      height: 100%;
       display: flex;
-      justify-content: space-around;
-      width: 75%;
-      margin: 0 auto;
-      padding-top: 20px;
-      text-align: center;
-      &__contents{
-        width: 200px;
-        &__title{
-          position: relative;
-          height: 200px;
-          width: 200px;
-          background-color: #DDDDDD;;
-          &__logo{
-            height: calc(100% - 20px);
-            display: flex;
-            align-items: center;
-            .logo__image{
-              width: 100%;
-              height: 100%;
-              object-fit: contain;
-            }
-          }
-          .official_site__link{
-            height: 20px;
-            width: 100%;
-            position: absolute;
-            bottom: 0px;
-            line-height: 20px;
-            background-color: white;
-            a{
-              text-decoration: none;
-              color: black;
-              font-size: 15px;
-            }
-          }
-        }
-        &__information{
+      align-items: center;
+      position: relative;
+      .live__image{
+        width: 400px;
+        height: 300px;
+        object-fit: cover;
+        margin: 0 auto;
+        position: absolute;
+        right: 10px;
+      }
+    }
+    &__rightbox{
+      width: 60%;
+      height: 100%;
+      &__title{
+        padding-top: 70px;
+        font-size: 27px;
+      }
+      &__explanation{
+        font-size: 14px;
+        line-height: 3;
+        padding: 20px 0 20px;
+      }
+      .fadeInUp{
+        // opacity → 不透明度の指定
+        opacity : 0;
+        // transform → 移動距離の指定
+        transform: translateY(50px);
+        // transition → 移動時間の指定
+        transition: 2.5s;
+      }
+      &__button{
+        font-size: 12px;
+        width: 150px;
+        height: 30px;
+        border: solid 1px;
+        background-color: #fff;
+        line-height: 30px;
+        margin: 0 auto;
+        
+        a{
+          text-decoration: none;
+          color: black;
           width: 100%;
-          height: 115px;
-          color: white;
-          font-size: 13px;
-          overflow-wrap: normal;
-          padding-top: 15px;
-          text-align: left;
+          height: 100%;
+          display: block;
         }
       }
     }
   }
-  .closed{
+
+  .share{
     width: 100%;
-    height: 420px;
-    background-color: #DDDDDD;
+    height: 460px;
+    background-color: white;
     text-align: center;
-    &__fes__title{
-      color: #1F1F1F;
-      font-size: 35px;
-      height: 40px;
-      line-height: 40px;
-      padding-top: 10px;
-    }
-    &__fes__box{
-      height: 330px;
-      display: flex;
-      justify-content: space-around;
-      width: 75%;
-      margin: 0 auto;
-      padding-top: 20px;
-      text-align: center;
-      &__contents{
-        width: 200px;
-        &__title{
-          position: relative;
-          height: 200px;
-          width: 200px;
-          background-color: #1F1F1F;
-          &__logo{
-            height: calc(100% - 20px);
-            display: flex;
-            align-items: center;
-            .logo__image{
-              width: 100%;
-              height: 100%;
-              object-fit: contain;
-            }
-          }
-          .official_site__link{
-            height: 20px;
-            width: 100%;
-            position: absolute;
-            bottom: 0px;
-            line-height: 20px;
-            background-color: white;
-            a{
-              text-decoration: none;
-              color: black;
-              font-size: 15px;
-            }
-          }
-        }
-        &__information{
+    display: flex;
+    font-family: 'Libre Baskerville', 'A1 Mincho', serif;
+    &__leftbox{
+      width: 60%;
+      height: 100%;
+      &__title{
+        padding-top: 70px;
+        font-size: 27px;
+      }
+      &__explanation{
+        font-size: 14px;
+        line-height: 3;
+        padding: 20px 0 20px;
+      }
+      .fadeInUp{
+        // opacity → 不透明度の指定
+        opacity : 0;
+        // transform → 移動距離の指定
+        transform: translateY(50px);
+        // transition → 移動時間の指定
+        transition: 2.5s;
+      }
+      &__button{
+        font-size: 12px;
+        width: 150px;
+        height: 30px;
+        border: solid 1px;
+        background-color: #fff;
+        line-height: 30px;
+        margin: 0 auto;
+        
+        a{
+          text-decoration: none;
+          color: black;
           width: 100%;
-          height: 115px;
-          color: #1F1F1F;
-          font-size: 13px;
-          overflow-wrap: normal;
-          padding-top: 15px;
-          text-align: left;
+          height: 100%;
+          display: block;
         }
+      }
+    }
+    &__rightbox{
+      width: 40%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      position: relative;
+      .post__image{
+        width: 400px;
+        height: 300px;
+        object-fit: cover;
+        margin: 0 auto;
+        position: absolute;
+        left: 10px;
       }
     }
   }
