--- a/app/assets/stylesheets/_tickets.scss
+++ b/app/assets/stylesheets/_tickets.scss
@@ -6,6 +6,7 @@
 
 .contents{
   font-family: 'Libre Baskerville', 'A1 Mincho', serif;
+  margin-top: 100px;
    .introduction{
     height: 600px;
     width: 100%;
