--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,20 +1,21 @@
 .header
   .header__main
     .header__main__logo
-      = link_to image_tag("ROCK LOVE HOUSE.png", size: "100x100", class: "logo"), root_path
-    %form.header__main__search
-      %input.header__main__search__form{name: "search", type: "text", placeholder: "イベント名、アーティスト名を入力して検索！"}
+      = link_to image_tag("ROCK LOVE HOUSE.png", size: "70x70", class: "logo"), root_path
+    %form.header__main__search.fadeInDown
+      %input.header__main__search__form{name: "search", type: "text", placeholder: "SEARCH", disabled: 'disabled'}
       %botton.header__main__search__button
         %i.fas.fa-search
-  .button__nav
-    - if user_signed_in?
-      .button__nav__logout
-        = link_to "ログアウト", destroy_user_session_path, class: "logout__button", method: :delete
-      .button__nav__mypage
-        = link_to "マイページ", "#", class: "mypage__button"
-    - else
-      .button__nav__login
-        = link_to "ログイン", new_user_session_path, class: "login__button"
-      .button__nav__new_user_registration
-        = link_to "新規登録", new_user_path , class: "new_user_registration__button"
-    
+    .header__main__button__nav
+      .search__button
+        %i.fas.fa-search
+      - if user_signed_in?
+        .button__nav__logout
+          = link_to "Logout", destroy_user_session_path, class: "logout__button", method: :delete
+        .button__nav__mypage
+          = link_to "MyPage", "#", class: "mypage__button"
+      - else
+        .button__nav__login
+          = link_to "Login", new_user_session_path, class: "login__button"
+        .button__nav__new_user_registration
+          = link_to "Signup", new_user_path , class: "new_user_registration__button"
