--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,7 @@
 @import "set_lists/show";
 @import "set_lists/edit";
 @import "users/new";
+@import "images/index";
+@import "images/new";
+@import "events/event_image";
+@import "images/show";
