--- a/app/assets/stylesheets/events/_index.scss
+++ b/app/assets/stylesheets/events/_index.scss
@@ -1,8 +1,9 @@
 .main__container{
   font-family: "Avenir Next", Verdana, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "游ゴシック", "Yu Gothic", "メイリオ", Meiryo, Osaka, sans-serif;
-  background-color: #f5f5f5;
+  background-color: white;
   font-size: 15px;
   padding-bottom: 20px;
+  margin-top: 100px;
   .explanation__box{
     text-align: center;
     .set_list__post__title{
