--- a/app/assets/stylesheets/_tickets.scss
+++ b/app/assets/stylesheets/_tickets.scss
@@ -41,7 +41,7 @@
       background-blend-mode: lighten;
       background-size: cover;
       background-repeat: no-repeat;
-      background-position: center center; 
+      background-position: center center;
     }
   }
   .blank{
@@ -63,7 +63,7 @@
       transition: 2.5s;
     }
   }
-  .ticket__transfer{
+  .set_list__share{
     height: 420px;
     width: 100%;
     background-color: #f4f7fa;
@@ -113,7 +113,7 @@
         background-color: #fff;
         line-height: 30px;
         margin: 0 auto;
-        
+
         a{
           text-decoration: none;
           color: black;
@@ -125,7 +125,7 @@
     }
   }
 
-  .share{
+  .image__share{
     width: 100%;
     height: 460px;
     background-color: white;
@@ -160,7 +160,7 @@
         background-color: #fff;
         line-height: 30px;
         margin: 0 auto;
-        
+
         a{
           text-decoration: none;
           color: black;
@@ -187,6 +187,3 @@
     }
   }
 }
-
-
-
