--- a/app/assets/stylesheets/events/_choise_artist.scss
+++ b/app/assets/stylesheets/events/_choise_artist.scss
@@ -1,8 +1,9 @@
 .choise_artist__page__container{
-  background-color: #f1f1f1;
+  background-color: white;
   text-align: center;
   font-size: 15px;
   font-family: "Avenir Next", Verdana, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "游ゴシック", "Yu Gothic", "メイリオ", Meiryo, Osaka, sans-serif;
+  margin-top: 100px;
   .choise_artist__page__header{
     &__title{
       font-size: 35px;
