--- a/app/assets/stylesheets/set_lists/_new.scss
+++ b/app/assets/stylesheets/set_lists/_new.scss
@@ -14,6 +14,7 @@
   background-color: #f1f1f1;
   font-family: "Avenir Next", Verdana, "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "游ゴシック", "Yu Gothic", "メイリオ", Meiryo, Osaka, sans-serif;
   font-size: 15px;
+  margin-top: 100px;
   .new__set_list__post__header{
     text-align: center;
     &__title{
