写真ダウンロード機能完了

--- a/app/assets/stylesheets/images/_show.scss
+++ b/app/assets/stylesheets/images/_show.scss
@@ -104,6 +104,9 @@
             padding-right: 5px;
           }
         }
+        button:focus{
+          outline: 0;
+        }
       }
     }
   }
