--- a/app/assets/stylesheets/images/_new.scss
+++ b/app/assets/stylesheets/images/_new.scss
@@ -22,17 +22,54 @@
     &__title{
       font-size: 18px;
     }
-    &__field{
+    &__field__box{
+      display: flex;
       width: 100%;
-      height: 23vh;
-      background-color: #f2f2f2;
-      border-width: 1px;
-      border-style: dashed;
-      border-color: rgb(204, 204, 204);
-      text-align: center;
-      cursor: pointer;
-      .fa-camera{
-        padding-top: 45px;
+      .event-image{
+        height: 23vh;
+        text-align: center;
+        background-color: #f2f2f2;
+        width: 20%;
+        &__content{
+          display: flex;
+          align-items: center;
+          height: calc(100% - 20px);
+          border-width: 1px;
+          border-style: dashed;
+          border-color: rgb(204, 204, 204);
+          &--icon{
+            img{
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+            }
+          }
+        }
+        &__operation{
+          height: 20px;
+          font-size: 14px;
+          border-width: 1px;
+          border-style: dashed;
+          border-color: rgb(204, 204, 204);
+          &--delete{
+            text-decoration: none;
+            color: #0099FF;
+            cursor: pointer;
+          }
+        }
+      }
+      .image__upload__field{
+        width: 100%;
+        height: 23vh;
+        background-color: #f2f2f2;
+        border-width: 1px;
+        border-style: dashed;
+        border-color: rgb(204, 204, 204);
+        text-align: center;
+        cursor: pointer;
+        .fa-camera{
+          padding-top: 45px;
+        }
       }
     }
     .image__form{
